# Uvt_barber_shop

./: CMakeLists.txt  student1.cpp  student2.cpp
common/classes/: Comanda.cpp  Comanda.h  Oferte.cpp  Oferte.h  Orar.cpp  Orar.h
common/files/: Comanda_acceptat.txt  Comanda_nou.txt  Oferte.txt
